--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,14 +16,7 @@
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#17323299",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "editorGroup.border": "#275555",
-    "sideBar.border": "#275555",
-    "statusBar.border": "#173232",
-    "statusBar.debuggingBackground": "#321717",
-    "statusBar.debuggingBorder": "#321717",
-    "statusBar.debuggingForeground": "#e7e7e7",
-    "tab.activeBorder": "#275555",
-    "titleBar.border": "#173232"
+    "sash.hoverBorder": "#275555"
   },
   "peacock.color": "#173232"
 }
